--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ https://templatemo.com/tm-536-dream-pulse
                                 			<p><b>ce que j'ai fais:</b> procurer un stage dans le secteur informatique du conseil regional Auvergne Rhône Alpes</p>
 							<p><b>Le Projet principal:</b> Creation d'un application/formulaire de recherche avec SQL et la cartographie.</p>
 							<p><b>Le Lien pour le Projet:</b> <a href="http://geo.auvergnerhonealpes.eu/cartora/index.html"> http://geo.auvergnerhonealpes.eu/cartora/index.html </a></p>
-							<p><a style="text-decoration:underline;" href="../rapport de stage frederic de Gaudemar-Abcey Final 2 - Web"> rapport de stage</a><p>
 							<br></br>
+							<h2 style="text-decoration:underline;"> <span> Stage Deuxiéme Année:</span></h2>
 							<p><b>ce que j'ai fais:</b> N/A</p>
 							<p><b>Le Projet principal:</b> N/A</p>
 							<p><b>Le Lien pour le Projet:</b> N/A</p>
