--- a/index.html
+++ b/index.html
@@ -206,10 +206,8 @@ https://templatemo.com/tm-536-dream-pulse
 							<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">Veille technologie</h2>
 							<h2 style="text-decoration:underline;"> <b><span>HTML</span></b></h2>
 							<p><b>Explication du Sujet Choisi:</b> </p>
-							<p></p>
-							<p></p>
-							<p></p>
-							<p></p>
+							<p>Le language HTML est l'un des langues de programation prncipal du monde. la version recent d'HTML est le HTML 5. cet langue est mise a jour de maniere occasionelle.</p>
+							<p>Le HTML est utiliser pour creer des sites web, alors que cette version nous permet de mettre en place des video et de l'audio sur le Web.</p>
 			    				<br>
                       </div>                        
                     </div>                  
