translate in eng part 1

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@ https://templatemo.com/tm-536-dream-pulse
 					</li>
 					<li class="nav-item">
 						<a href="#about" class="nav-link">
-							<span class="d-inline-block mr-3">competence</span>
+							<span class="d-inline-block mr-3">skills/qualifications</span>
 							<span class="d-inline-block tm-white-rect"></span>
 						</a>
 					</li>
 					<li class="nav-item">
 						<a href="#work" class="nav-link">
-							<span class="d-inline-block mr-3">Stages</span>
+							<span class="d-inline-block mr-3">Internship</span>
 							<span class="d-inline-block tm-white-rect"></span>
 						</a>
 					</li>
@@ -61,7 +61,7 @@ https://templatemo.com/tm-536-dream-pulse
 					</li>
 					<li class="nav-item">
 						<a href="#vt" class="nav-link">
-							<span class="d-inline-block mr-3">vielle technologie</span>
+							<span class="d-inline-block mr-3">IT intelligence</span>
 							<span class="d-inline-block tm-white-rect"></span>
 						</a>
 					</li>
@@ -92,7 +92,7 @@ https://templatemo.com/tm-536-dream-pulse
                     <div class="tm-bg-white-transparent tm-intro">
                         <h2 style="text-decoration:underline;" class="tm-section-title mb-5 text-uppercase tm-color-primary">Introducing Frederic de Gaudemar Ancey</h2>
                         <p class="tm-color-gray"> Né a Dublin le 8 mars 2002, Frederic est un etudiant de BTS SIO dans l'enseignement superieur "Les Chassagnes".
-			<br>Il a choisi cet option pour devenir un grand developpeur en informatique.
+			<br>He has chosen this path to become a computer develloper, especially in video games.
 			<br>
                         </p>
                     </div>              
@@ -106,34 +106,43 @@ https://templatemo.com/tm-536-dream-pulse
               <div class="col-xl-6">
                 <div class="tm-section-half">    
                     <div><i class="fas fa-6x fa-balance-scale mb-5 tm-section-icon"></i></div>                        
-                    <h2 class="tm-section-title tm-color-primary mb-5" style="text-decoration:underline;">Competences de Frederic de Gaudemar</h2>
+                    <h2 class="tm-section-title tm-color-primary mb-5" style="text-decoration:underline;"> Frederic de Gaudemar-Ancey's skills: </h2>
                     <p class="mb-5">
 						<ul>
-						<b style="text-decoration:underline;">Formation d'etude:</b>
+						<b style="text-decoration:underline;">Study training:</b>
 							<ul>
-								<li>jusqu'en 2018: étudiants dans l'ecole international 'CSI'.
-								<li>2018-2020: étudiants dans le lycée privée 'Les Chassagnes'.</li>
-								<li>2020-present: étudiants en BTS SIO dans l'ensaignement superieur 'Les Chassagnes'.</li>
+								<li>until 2018: student in the international school 'CSI'.
+								<li>2018-2020: student in the private college 'Les Chassagnes'.</li>
+								<li>2020-present: BTS SIO student in 'Les Chassagnes' higher education.</li>
 							</ul>
 						<br>
-						<b style="text-decoration:underline;">Diplomes obtenues:</b>
+						<b style="text-decoration:underline;">obtained qualifications:</b>
 							<ul>
-								<li>Diplômes national du brevet (mention "bien").</li>
-								<li>GCSE (General Certificate of Secondary Education) (brevet anglais)</li>
-								<li>BAccalauréat STMG (mention "Assez Bien")</li>
+								#Diplômes national du brevet (mention "bien")
+								<li>National Patent Diplomas ("Good")</li>
+								#GCSE (General Certificate of Secondary Education) (brevet anglais)
+								<li>GCSE (General Certificate of Secondary Education)</li>
+								#BAccalauréat STMG (mention "Assez Bien")
+								<li>STMG baccalaureate (mention "Assez Bien")</li>
 							</ul>
 						<br>
 						<b style="text-decoration:underline;">Competences techniques:</b>
 							<ul>
-								<li>Programmeur en HTML, PHP, SQL, l'Algorithme (python) et en POO.</li>
-								<li>comprend les flux de réseau</li>
-								<li>faire des cartographie avec Qgis</li>
-								<li>utiliser des outils Microsoft (y inclut Excel; Word; Access; teams;...etc.) et Google(slides, docs, drive... etc).</li>
+								//remplacer avec les images
+								#Programmeur en HTML, PHP, SQL, l'Algorithme (python) et en POO.
+								<li>Programmer in HTML, PHP, SQL, Algorithm (python) and POO.</li>
+								<br>
+								#comprend les flux de reseaux
+								<li>understands network flows</li>
+								#faire des cartographie avec Qgis
+								<li>mapping with Qgis</li>
+								#utiliser des outils Microsoft (y inclut Excel; Word; Access; teams;...etc.) et Google(slides, docs, drive... etc).
+								<li>can use Microsoft tools (including Excel; Word; Access; teams;...etc.) and Google(slides, docs, drive... etc.).</li>
 							</ul>
 						<br>
-						<b style="text-decoration:underline;">Autres competences:</b>
+						<b style="text-decoration:underline;">other skills:</b>
 							<ul>
-								<li>bilingue: peut parler francais et anglais.</li>
+								<li>bilingual (can speak both french and english).</li>
 							</ul>
 						</ul>
                     </p>
