translate to eng part 2

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ https://templatemo.com/tm-536-dream-pulse
 					</li>
 					<li class="nav-item">
 						<a href="#talk" class="nav-link">
-							<span class="d-inline-block mr-3">mes contacts</span>
+							<span class="d-inline-block mr-3"> Contacts</span>
 							<span class="d-inline-block tm-white-rect"></span>
 						</a>
 					</li>
@@ -91,7 +91,7 @@ https://templatemo.com/tm-536-dream-pulse
                 <section id="intro" class="tm-section">
                     <div class="tm-bg-white-transparent tm-intro">
                         <h2 style="text-decoration:underline;" class="tm-section-title mb-5 text-uppercase tm-color-primary">Introducing Frederic de Gaudemar Ancey</h2>
-                        <p class="tm-color-gray"> Né a Dublin le 8 mars 2002, Frederic est un etudiant de BTS SIO dans l'enseignement superieur "Les Chassagnes".
+                        <p class="tm-color-gray"> Born in Dublin on 8 March 2002, Frederic is a student of BTS SIO in Higher Education "Les Chassagnes".
 			<br>He has chosen this path to become a computer develloper, especially in video games.
 			<br>
                         </p>
@@ -212,11 +212,11 @@ https://templatemo.com/tm-536-dream-pulse
                 <div class="w-100 tm-double-border-1 tm-border-gray">
                     <div class="tm-double-border-2 tm-border-gray tm-box-pad">
                       <div class="tm-gallery-wrap">
-							<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">Veille technologie</h2>
+							<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">IT intelligence</h2>
 							<h2 style="text-decoration:underline;"> <b><span>HTML</span></b></h2>
 							<p><b>Explication du Sujet Choisi:</b> </p>
-							<p>Le language HTML est l'un des langues de programation prncipal du monde. la version recent d'HTML est le HTML 5. cet langue est mise a jour de maniere occasionelle.</p>
-							<p>Le HTML est utiliser pour creer des sites web, alors que cette version nous permet de mettre en place des video et de l'audio sur le Web.</p>
+							<p>The HTML language is one of the world’s main programming languages. The recent version of HTML is HTML 5 . this language is updated occasionally.</p>
+							<p>HTML is used to create websites, while this version allows us to set up video and audio on the Web.</p>
 			    				<br>
                       </div>                        
                     </div>                  
