--- a/index.html
+++ b/index.html
@@ -158,16 +158,16 @@ https://templatemo.com/tm-536-dream-pulse
           			<div class="w-100 tm-double-border-1 tm-border-gray">
           				<div class="tm-double-border-2 tm-border-gray tm-box-pad">
           					<div class="tm-gallery-wrap">
-                        				<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">mes stages</h2>
-         						<h2 style="text-decoration:underline;"> <span> Stage Premiere Année:</span></h2>
-                                			<p><b>ce que j'ai fais:</b> procurer un stage dans le secteur informatique du conseil regional Auvergne Rhône Alpes</p>
-							<p><b>Le Projet principal:</b> Creation d'un application/formulaire de recherche avec SQL et la cartographie.</p>
-							<p><b>Le Lien pour le Projet:</b> <a href="http://geo.auvergnerhonealpes.eu/cartora/index.html"> http://geo.auvergnerhonealpes.eu/cartora/index.html </a></p>
+                        				<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">internship</h2>
+         						<h2 style="text-decoration:underline;"> <span> Internship first year:</span></h2>
+                                			<p><b>What I've done:</b>provide an internship in the IT sector of the Auvergne Rhône Alpes Regional Council</p>
+							<p><b>main project:</b>Creating a search application/form with SQL and mapping.</p>
+							<p><b>Link to project:</b> <a href="http://geo.auvergnerhonealpes.eu/cartora/index.html"> http://geo.auvergnerhonealpes.eu/cartora/index.html </a></p>
 							<br></br>
-							<h2 style="text-decoration:underline;"> <span> Stage Deuxiéme Année:</span></h2>
-							<p><b>ce que j'ai fais:</b> N/A</p>
-							<p><b>Le Projet principal:</b> N/A</p>
-							<p><b>Le Lien pour le Projet:</b> N/A</p>
+							<h2 style="text-decoration:underline;"> <span> internship second year:</span></h2>
+							<p><b>What I've done:</b> N/A</p>
+							<p><b>main project:</b> N/A</p>
+							<p><b>Link to project:</b> N/A</p>
           					</div>                        
           				</div>                  
          			</div>     
