--- a/index.html
+++ b/index.html
@@ -183,20 +183,20 @@ https://templatemo.com/tm-536-dream-pulse
 						<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4">les AP completes</h2>
                         <p class="mb-5">
 							<ul>
-								<b style="text-decoration:underline;">Semestre 1:</b>
+								<b style="text-decoration:underline;">First semestre:</b>
 								<ul>
-									<li><b>Presentation sur l'APT:</b> Avec Powerpoint, deux camarades du BTS et moi avons presenter un exposé sur les dangers des attaques APT (Attaque Persistant Threat).</li>
-									<li><b>Formulaires sur les avocats:</b> En utilisant Microsoft Access, on a creer un formulaire sur les avocats.</li>
-									<li><b>PHP:</b> On a fais quelques petites sites avec la langue de programmations PHP.</li>
-									<li><b>Cyberworld:</b> Cet AP est le resultat de 3 AP vaguement differents, y inclut la sternography. On a fait ces AP en utilisant un simulateur de reseau appellant Cisco Tracer Pack.</li>
-									<li><b>Team Viewer:</b> On a reussi a connecter a un poste par un autre en utilisant Team Viewer.</li>
+									<li><b>Presentation on the APT:</b> With Powerpoint, Two BTS collegues and I presented a lecture on the dangers of APT attacks (Persistent Threat Attack).</li>
+									<li><b>Forms on avocats:</b>Using Microsoft Access, we created a form for lawyers, about lawyers.</li>
+									<li><b>PHP:</b> We made some small sites with the language of PHP programming.</li>
+									<li><b>Cyberworld:</b> This AP is the result of 3 different AP, including sternography. We made these APs using a network simulator called Cisco Tracer Pack.</li>
+									<li><b>Team Viewer:</b> We managed to connect to one station by another using Team Viewer.</li>
 								</ul>
 							
 								<br></br>
-								<b style="text-decoration:underline;">Semestre 2:</b>
+								<b style="text-decoration:underline;">Second Semestre:</b>
 								<ul>
-									<li><b>Infodev:</b> Creation d'un site fonctionelle en utilisant en même temps l'HTML et PHP.</li>
-									<li><b>POO:</b> Creation ds scripts des logiciels, ainsi que des base de données sans utiliser seulment le SQL.</li>
+									<li><b>Infodev:</b> Creation of a functional site using at the same time HTML and PHP..</li>
+									<li><b>POO:</b> Creation of software scripts, as well as databases without using only SQL.</li>
 								</ul>
 							</ul>
 						</p>
