--- a/index.html
+++ b/index.html
@@ -118,25 +118,25 @@ https://templatemo.com/tm-536-dream-pulse
 						<br>
 						<b style="text-decoration:underline;">obtained qualifications:</b>
 							<ul>
-								#Diplômes national du brevet (mention "bien")
+								//Diplômes national du brevet (mention "bien")
 								<li>National Patent Diplomas ("Good")</li>
-								#GCSE (General Certificate of Secondary Education) (brevet anglais)
+								//GCSE (General Certificate of Secondary Education) (brevet anglais)
 								<li>GCSE (General Certificate of Secondary Education)</li>
-								#BAccalauréat STMG (mention "Assez Bien")
+								//BAccalauréat STMG (mention "Assez Bien")
 								<li>STMG baccalaureate (mention "Assez Bien")</li>
 							</ul>
 						<br>
 						<b style="text-decoration:underline;">Competences techniques:</b>
+//remplacer avec les images
+//Programmeur en HTML, PHP, SQL, l'Algorithme (python) et en POO.
 							<ul>
-								//remplacer avec les images
-								#Programmeur en HTML, PHP, SQL, l'Algorithme (python) et en POO.
 								<li>Programmer in HTML, PHP, SQL, Algorithm (python) and POO.</li>
 								<br>
-								#comprend les flux de reseaux
+//comprend les flux de reseaux
 								<li>understands network flows</li>
-								#faire des cartographie avec Qgis
+//faire des cartographie avec Qgis
 								<li>mapping with Qgis</li>
-								#utiliser des outils Microsoft (y inclut Excel; Word; Access; teams;...etc.) et Google(slides, docs, drive... etc).
+//utiliser des outils Microsoft (y inclut Excel; Word; Access; teams;...etc.) et Google(slides, docs, drive... etc).
 								<li>can use Microsoft tools (including Excel; Word; Access; teams;...etc.) and Google(slides, docs, drive... etc.).</li>
 							</ul>
 						<br>
@@ -230,7 +230,7 @@ https://templatemo.com/tm-536-dream-pulse
                 <div class="col-xl-6 mb-5">
 					<div class="tm-double-border-1 tm-border-gray">
 						<div class="tm-double-border-2 tm-border-gray tm-box-pad">
-							<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4">mes contact</h2>
+							<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4">Contacts</h2>
 							<p style="text-decoration:underline;" class="mb-4"><b>email:</b> degaudemar.f@gmail.com</p>
 							<p style="text-decoration:underline;" class="mb-3"><b>Mobile:</b> 06 52 05 81 63</p>
 						</div>                    
