--- a/index.html
+++ b/index.html
@@ -118,21 +118,15 @@ https://templatemo.com/tm-536-dream-pulse
 						<br>
 						<b style="text-decoration:underline;">obtained qualifications:</b>
 							<ul>
-								//Diplômes national du brevet (mention "bien")
 								<li>National Patent Diplomas ("Good")</li>
-								//GCSE (General Certificate of Secondary Education) (brevet anglais)
 								<li>GCSE (General Certificate of Secondary Education)</li>
-								//BAccalauréat STMG (mention "Assez Bien")
 								<li>STMG baccalaureate (mention "Assez Bien")</li>
 							</ul>
 						<br>
-//remplacer avec les images
-//Programmeur en HTML, PHP, SQL, l'Algorithme (python) et en POO.
-//comprend les flux de reseaux
-//faire des cartographie avec Qgis
-//utiliser des outils Microsoft (y inclut Excel; Word; Access; teams;...etc.) et Google(slides, docs, drive... etc).
+
 						<b style="text-decoration:underline;">Competences techniques:</b>
 							<ul>
+								//remplacer avec les icons
 								<li>Programmer in HTML, PHP, SQL, Algorithm (python) and POO.</li>
 								<br>
 								<li>understands network flows</li>
