--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ https://templatemo.com/tm-536-dream-pulse
 
 						<b style="text-decoration:underline;">Competences techniques:</b>
 							<ul>
-								<li>Programmer in HTML, PHP, SQL, Algorithm (python) and POO.</li>
+								<li>Programmer in HTML, PHP, SQL, Algorithm (especially in python) and POO.</li>
 								<li>understands network flows</li>
 								<li>mapping with Qgis</li>
 								<li>can use Microsoft tools (including Excel; Word; Access; teams;...etc.) and Google(slides, docs, drive... etc.).</li>
