--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ https://templatemo.com/tm-536-dream-pulse
 						<ul>
 						<b style="text-decoration:underline;">Study training:</b>
 							<ul>
-								<li>until 2018: student in the international school 'CSI'.
+								<li>until 2018: student in the international school 'CSI'.</li>
 								<li>2018-2020: student in the private college 'Les Chassagnes'.</li>
 								<li>2020-present: BTS SIO student in 'Les Chassagnes' higher education.</li>
 							</ul>
@@ -127,9 +127,9 @@ https://templatemo.com/tm-536-dream-pulse
 						<b style="text-decoration:underline;">Competences techniques:</b>
 							<ul>
 								<li>Programmer in HTML, PHP, SQL, Algorithm (especially in python) and POO.</li>
-								<li>understands network flows</li>
-								<li>mapping with Qgis</li>
-								<li>can use Microsoft tools (including Excel; Word; Access; teams;...etc.) and Google(slides, docs, drive... etc.).</li>
+								<li>Understands network flows</li>
+								<li>Mapping with Qgis</li>
+								<li>Can use Microsoft tools (including Excel; Word; Access; teams;...etc.) and Google(slides, docs, drive... etc.).</li>
 							</ul>
 						<br>
 						<b style="text-decoration:underline;">other skills:</b>
@@ -152,13 +152,13 @@ https://templatemo.com/tm-536-dream-pulse
           					<div class="tm-gallery-wrap">
                         				<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">internship</h2>
          						<h2 style="text-decoration:underline;"> <span> Internship first year:</span></h2>
-                                			<p><b>What I've done:</b>provide an internship in the IT sector of the Auvergne Rhône Alpes Regional Council</p>
-							<p><b>main project:</b>Creating a search application/form with SQL and mapping.</p>
+                                			<p><b>What I've done:</b>Provide an internship in the IT sector of the Auvergne Rhône Alpes Regional Council</p>
+							<p><b>Wain project:</b>Creating a search application/form with SQL and mapping.</p>
 							<p><b>Link to project:</b> <a href="http://geo.auvergnerhonealpes.eu/cartora/index.html"> http://geo.auvergnerhonealpes.eu/cartora/index.html </a></p>
 							<br></br>
 							<h2 style="text-decoration:underline;"> <span> internship second year:</span></h2>
 							<p><b>What I've done:</b> N/A</p>
-							<p><b>main project:</b> N/A</p>
+							<p><b>Wain project:</b> N/A</p>
 							<p><b>Link to project:</b> N/A</p>
           					</div>                        
           				</div>                  
@@ -178,7 +178,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<b style="text-decoration:underline;">First semestre:</b>
 								<ul>
 									<li><b>Presentation on the APT:</b> With Powerpoint, Two BTS collegues and I presented a lecture on the dangers of APT attacks (Persistent Threat Attack).</li>
-									<li><b>Forms on avocats:</b>Using Microsoft Access, we created a form for lawyers, about lawyers.</li>
+									<li><b>Forms on avocats:</b> Using Microsoft Access, we created a form for lawyers, about lawyers.</li>
 									<li><b>PHP:</b> We made some small sites with the language of PHP programming.</li>
 									<li><b>Cyberworld:</b> This AP is the result of 3 different AP, including sternography. We made these APs using a network simulator called Cisco Tracer Pack.</li>
 									<li><b>Team Viewer:</b> We managed to connect to one station by another using Team Viewer.</li>
