--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@ https://templatemo.com/tm-536-dream-pulse
                         				<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">internship</h2>
          						<h2 style="text-decoration:underline;"> <span> Internship first year:</span></h2>
                                 			<p><b>What I've done:</b>Provide an internship in the IT sector of the Auvergne Rhône Alpes Regional Council</p>
-							<p><b>Wain project:</b>Creating a search application/form with SQL and mapping.</p>
+							<p><b>Main project:</b>Creating a search application/form with SQL and mapping.</p>
 							<p><b>Link to project:</b> <a href="http://geo.auvergnerhonealpes.eu/cartora/index.html"> http://geo.auvergnerhonealpes.eu/cartora/index.html </a></p>
 							<br></br>
 							<h2 style="text-decoration:underline;"> <span> internship second year:</span></h2>
 							<p><b>What I've done:</b> N/A</p>
-							<p><b>Wain project:</b> N/A</p>
+							<p><b>Main project:</b> N/A</p>
 							<p><b>Link to project:</b> N/A</p>
           					</div>                        
           				</div>                  
