--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ https://templatemo.com/tm-536-dream-pulse
                 <section id="intro" class="tm-section">
                     <div class="tm-bg-white-transparent tm-intro">
                         <h2 style="text-decoration:underline;" class="tm-section-title mb-5 text-uppercase tm-color-primary">Introducing Frederic de Gaudemar Ancey</h2>
-                        <p class="tm-color-gray"> Born in Dublin on 8 March 2002, Frederic is a student of BTS SIO in Higher Education "Les Chassagnes".
-			<br>He has chosen this path to become a computer develloper, especially in video games.
+                        <p class="tm-color-gray"> Born in Dublin on 8 March 2002, Frederic is a student of the BTS SIO in Higher Education "Les Chassagnes".
+			<br>I have chosen this path because I'm interested in becoming a computer developer, especially in video games.
 			<br>
                         </p>
                     </div>              
@@ -116,7 +116,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li>2020-present: BTS SIO student in 'Les Chassagnes' higher education.</li>
 							</ul>
 						<br>
-						<b style="text-decoration:underline;">obtained qualifications:</b>
+						<b style="text-decoration:underline;">Obtained qualifications:</b>
 							<ul>
 								<li>National Patent Diplomas ("Good")</li>
 								<li>GCSE (General Certificate of Secondary Education)</li>
@@ -132,7 +132,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li>Can use Microsoft tools (including Excel; Word; Access; teams;...etc.) and Google(slides, docs, drive... etc.).</li>
 							</ul>
 						<br>
-						<b style="text-decoration:underline;">other skills:</b>
+						<b style="text-decoration:underline;">Other skills:</b>
 							<ul>
 								<li>bilingual (can speak both french and english).</li>
 							</ul>
@@ -152,8 +152,8 @@ https://templatemo.com/tm-536-dream-pulse
           					<div class="tm-gallery-wrap">
                         				<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">internship</h2>
          						<h2 style="text-decoration:underline;"> <span> Internship first year:</span></h2>
-                                			<p><b>What I've done:</b>Provide an internship in the IT sector of the Auvergne Rhône Alpes Regional Council</p>
-							<p><b>Main project:</b>Creating a search application/form with SQL and mapping.</p>
+                                			<p><b>What I've done:</b> Provide an internship in the IT sector of the Auvergne Rhône Alpes Regional Council</p>
+							<p><b>Main project:</b> Creating a search application/form with SQL and mapping.</p>
 							<p><b>Link to project:</b> <a href="http://geo.auvergnerhonealpes.eu/cartora/index.html"> http://geo.auvergnerhonealpes.eu/cartora/index.html </a></p>
 							<br></br>
 							<h2 style="text-decoration:underline;"> <span> internship second year:</span></h2>
@@ -177,9 +177,9 @@ https://templatemo.com/tm-536-dream-pulse
 							<ul>
 								<b style="text-decoration:underline;">First semestre:</b>
 								<ul>
-									<li><b>Presentation on the APT:</b> With Powerpoint, Two BTS collegues and I presented a lecture on the dangers of APT attacks (Persistent Threat Attack).</li>
+									<li><b>Presentation on the APT:</b> With Powerpoint, two BTS collegues and I have presented a lecture on the dangers of APT attacks (Persistent Threat Attack).</li>
 									<li><b>Forms on avocats:</b> Using Microsoft Access, we created a form for lawyers, about lawyers.</li>
-									<li><b>PHP:</b> We made some small sites with the language of PHP programming.</li>
+									<li><b>PHP:</b> We made some small sites with PHP programming.</li>
 									<li><b>Cyberworld:</b> This AP is the result of 3 different AP, including sternography. We made these APs using a network simulator called Cisco Tracer Pack.</li>
 									<li><b>Team Viewer:</b> We managed to connect to one station by another using Team Viewer.</li>
 								</ul>
@@ -206,7 +206,7 @@ https://templatemo.com/tm-536-dream-pulse
                       <div class="tm-gallery-wrap">
 							<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">IT intelligence</h2>
 							<h2 style="text-decoration:underline;"> <b><span>HTML</span></b></h2>
-							<p><b>Explication du Sujet Choisi:</b> </p>
+							<p><b>Explaining the chosen subject:</b> </p>
 							<p>The HTML language is one of the world’s main programming languages. The recent version of HTML is HTML 5 . this language is updated occasionally.</p>
 							<p>HTML is used to create websites, while this version allows us to set up video and audio on the Web.</p>
 			    				<br>
