--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@ https://templatemo.com/tm-536-dream-pulse
 						<b style="text-decoration:underline;">Competences techniques:</b>
 							<ul>
 								<li>Programmer in HTML, PHP, SQL, Algorithm (especially in python) and POO.</li>
+								<ul>
+									<i class='fab fa-css3-alt' style='font-size:48px;color:red'></i> 
+								</ul>
 								<li>Understands network flows</li>
 								<li>Mapping with Qgis</li>
 								<li>Can use Microsoft tools (including Excel; Word; Access; teams;...etc.) and Google(slides, docs, drive... etc.).</li>
