--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@ https://templatemo.com/tm-536-dream-pulse
 							<ul>
 								<li>Programmer in HTML, PHP, SQL, Algorithm (especially in python) and POO.</li>
 								<ul>
-									<i class='fab fa-css3-alt' style='font-size:48px;color:red'></i> 
+									<i class='fab fa-css3-alt' style='font-size:48px;color:red'></i>
+									<i class='fab fa-github' style='font-size:48px'></i>  
+									<i class='fab fa-python' style='font-size:48px'></i> 
 								</ul>
 								<li>Understands network flows</li>
 								<li>Mapping with Qgis</li>
