--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@ https://templatemo.com/tm-536-dream-pulse
 								<ul>
 									<i class='fab fa-css3-alt' style='font-size:48px;color:red'></i>
 									<i class='fab fa-github' style='font-size:48px'></i>  
-									<i class='fab fa-python' style='font-size:48px'></i> 
+									<i class='fab fa-python' style='font-size:48px'></i>
+									<i class='fab fa-html5' style='font-size:48px'></i> 
 								</ul>
 								<li>Understands network flows</li>
 								<li>Mapping with Qgis</li>
