--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ https://templatemo.com/tm-536-dream-pulse
 									<i class='fab fa-python' style='font-size:48px'></i>
 									<i class='fab fa-html5' style='font-size:48px'></i>
 									<i class='fab fa-php' style='font-size:48px'></i> 
-									<i class='fab fa-POO' style='font-size:48px'></i> 
+									<i class='fab fa-C#' style='font-size:48px'></i> 
 								</ul>
 								<li>Understands network flows</li>
 								<li>Mapping with Qgis</li>
