--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ https://templatemo.com/tm-536-dream-pulse
 								<li>Programmer in HTML, PHP, SQL, Algorithm (especially in python) and POO.</li>
 								<ul>
 									<i class='fab fa-css3-alt' style='font-size:48px;color:red'></i>
-									<i class='fab fa-github' style='font-size:48px; color:black'></i>  
-									<i class='fab fa-python' style='font-size:48px'></i>
+									<i class='fab fa-github' style='font-size:48px;color:black'></i>  
+									<i class='fab fa-python' style='font-size:48px;color:blue'></i>
 									<i class='fab fa-html5' style='font-size:48px;color:orange'></i>
 									<i class='fab fa-php' style='font-size:48px;color:black'></i> 
 									<i class='fab fa-C#' style='font-size:48px'></i> 
