--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ https://templatemo.com/tm-536-dream-pulse
 					</li>
 					<li class="nav-item">
 						<a href="#vt" class="nav-link">
-							<span class="d-inline-block mr-3">IT intelligence</span>
+							<span class="d-inline-block mr-3">Technology watch</span>
 							<span class="d-inline-block tm-white-rect"></span>
 						</a>
 					</li>
@@ -214,7 +214,7 @@ https://templatemo.com/tm-536-dream-pulse
                 <div class="w-100 tm-double-border-1 tm-border-gray">
                     <div class="tm-double-border-2 tm-border-gray tm-box-pad">
                       <div class="tm-gallery-wrap">
-							<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">IT intelligence</h2>
+							<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">Technology watch</h2>
 							<h2 style="text-decoration:underline;"> <b><span>HTML</span></b></h2>
 							<p><b>Explaining the chosen subject:</b> </p>
 							<p>The HTML language is one of the world’s main programming languages. The recent version of HTML is HTML 5 . this language is updated occasionally.</p>
