--- a/index.html
+++ b/index.html
@@ -215,11 +215,14 @@ https://templatemo.com/tm-536-dream-pulse
                     <div class="tm-double-border-2 tm-border-gray tm-box-pad">
                       <div class="tm-gallery-wrap">
 							<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">Technology watch</h2>
-							<h2 style="text-decoration:underline;"> <b><span>HTML</span></b></h2>
+							<h2 style="text-decoration:underline;"> <b><span>html</span></b></h2>
 							<p><b>Explaining the chosen subject:</b> </p>
 							<p>The HTML language is one of the world’s main programming languages. The recent version of HTML is HTML 5 . this language is updated occasionally.</p>
 							<p>HTML is used to create websites, while this version allows us to set up video and audio on the Web.</p>
-			    				<br>
+                                                        <br>
+			      				<h2 style="text-decoration:underline;"> <b><span>Laravel</span></b></h2>
+			      				<p> Laravel is a php framework which contains plenty of different technological services, from Appplication scafolding to server management</p>
+                                                        <p>recently, it has released a serverless plateforme called vapor. However, despite not being an actual server, vapor can still create databases, as well as modify, manage and scale them. the databases willl be store in a cloud, and cna be access via sign up (though you still have to pay).</p> 
                       </div>                        
                     </div>                  
                   </div>     
