--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@ https://templatemo.com/tm-536-dream-pulse
                                 			<p><b>What I've done:</b> Provide an internship in the IT sector of the Auvergne Rhône Alpes Regional Council</p>
 							<p><b>Main project:</b> Creating a search application/form with SQL and mapping.</p>
 							<p><b>Link to project:</b> <a href="http://geo.auvergnerhonealpes.eu/cartora/index.html"> http://geo.auvergnerhonealpes.eu/cartora/index.html </a></p>
+							
 							<br></br>
 							<h2 style="text-decoration:underline;"> <span> internship second year:</span></h2>
 							<p><b>What I've done:</b> N/A</p>
@@ -187,7 +188,7 @@ https://templatemo.com/tm-536-dream-pulse
 							<ul>
 								<b style="text-decoration:underline;">First semestre:</b>
 								<ul>
-									<li><b>Presentation on the APT:</b> With Powerpoint, two BTS collegues and I have presented a lecture on the dangers of APT attacks (Persistent Threat Attack).</li>
+									<li><a href:"/Presentation_APT_2 (1).pptx"><b>Presentation on the APT</a>:</b> With Powerpoint, two BTS collegues and I have presented a lecture on the dangers of APT attacks (Persistent Threat Attack).</li>
 									<li><b>Forms on avocats:</b> Using Microsoft Access, we created a form for lawyers, about lawyers.</li>
 									<li><b>PHP:</b> We made some small sites with PHP programming.</li>
 									<li><b>Cyberworld:</b> This AP is the result of 3 different AP, including sternography. We made these APs using a network simulator called Cisco Tracer Pack.</li>
