--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ https://templatemo.com/tm-536-dream-pulse
 							<ul>
 								<b style="text-decoration:underline;">First semestre:</b>
 								<ul>
-									<li><b><a href:"/Presentation_APT_2 (1).pptx">Presentation on the APT</a>:</b> With Powerpoint, two BTS collegues and I have presented a lecture on the dangers of APT attacks (Persistent Threat Attack).</li>
+									<li><b><img src="/Presentation_APT_2 (1).pptx">Presentation on the APT</img>:</b> With Powerpoint, two BTS collegues and I have presented a lecture on the dangers of APT attacks (Persistent Threat Attack).</li>
 									<li><b>Forms on avocats:</b> Using Microsoft Access, we created a form for lawyers, about lawyers.</li>
 									<li><b>PHP:</b> We made some small sites with PHP programming.</li>
 									<li><b>Cyberworld:</b> This AP is the result of 3 different AP, including sternography. We made these APs using a network simulator called Cisco Tracer Pack.</li>
