--- a/index.html
+++ b/index.html
@@ -222,8 +222,9 @@ https://templatemo.com/tm-536-dream-pulse
 							<p>HTML is used to create websites, while this version allows us to set up video and audio on the Web.</p>
                                                         <br>
 			      				<h2 style="text-decoration:underline;"> <b><span>Laravel</span></b></h2>
-			      				<p> Laravel is a php framework which contains plenty of different technological services, from Appplication scafolding to server management</p>
-                                                        <p>recently, it has released a serverless plateforme called vapor. However, despite not being an actual server, vapor can still create databases, as well as modify, manage and scale them. the databases willl be store in a cloud, and cna be access via sign up (though you still have to pay).</p> 
+			      				<p> Laravel is a php framework which contains plenty of different technological services, from Appplication scafolding to server management. Sa version global la plus recent se date du 10 Fevrier 2021 (version 8.27).</p>
+                                                        <p>recently, it has released a serverless plateforme called vapor. However, despite not being an actual server, vapor can still create databases, as well as modify, manage and scale them. the databases willl be store in a cloud, and cna be access via sign up (though you still have to pay).</p>
+			      				<p>2/10/2021: <a href="https://laravel-news.com/tailwind-css-v3-alpha">lancement du plateform css Tailwind (en Alpha)</a></p>
                       </div>                        
                     </div>                  
                   </div>     
