--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ https://templatemo.com/tm-536-dream-pulse
 							<p>HTML is used to create websites, while this version allows us to set up video and audio on the Web.</p>
                                                         <br>
 			      				<h2 style="text-decoration:underline;"> <b><span>Laravel</span></b></h2>
-			      				<p> Laravel is a php framework which contains plenty of different technological services, from Appplication scafolding to server management. Its most recent version was released in February 10, 2021 (version 8.27), and a version 9 is on the way.</p>
+			      				<p> Laravel is a php framework which contains plenty of different technological services, from Appplication scafolding to server management. Its most recent version was released in February 10, 2021 (version 8.27), and a version 9 is due to be released in the early 2022.</p>
                                                         <p>recently, it has released a serverless plateforme called vapor. However, despite not being an actual server, vapor can still create databases, as well as modify, manage and scale them. the databases willl be store in a cloud, and cna be access via sign up (though you still have to pay).</p>
 			      				<p> <b>2/10/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-alpha">launch of the Css Tailwind platform (in its Alpha stage)</a></p>
                       </div>                        
