--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@ https://templatemo.com/tm-536-dream-pulse
                       <div class="tm-gallery-wrap">
 							<h2 style="text-decoration:underline;" class="tm-color-primary tm-section-title mb-4 ml-2">Technology watch</h2>														
 			      				<h2 style="text-decoration:underline;"> <b><span>Laravel</span></b></h2>
+			    				<p><b>Explaining the chosen subject:</b></p>
 			      				<p> Primarily a php framework, Laravel is a web designing pack containing plenty of different technological services, from Appplication scafolding to server management. Its most recent version was released in February 10, 2021 (that being version 8.27), and a version 9 is due to be released in the early 2022.</p>
                                                         <p>recently, it has released a serverless plateforme called vapor. However, despite not being an actual server, vapor can still create databases, as well as modify, manage and scale them. the databases willl be store in a cloud, and cna be access via sign up (though you still have to pay).</p>
 			      				<b>Timeline des nouvelles recents de Laravel: </b>
