--- a/index.html
+++ b/index.html
@@ -224,8 +224,7 @@ https://templatemo.com/tm-536-dream-pulse
 							<ul>
 								<li><b> 02/10/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-alpha">launch of the Css Tailwind platform (in its Alpha stage)</a></li>
 			     					<li><b> 05/10/2021: </b><a href="https://laravel-news.com/serialization-for-eloquent-s-querybuilder"> L'option serialization pour le QueryBuilder</a></li>
-								<li><b> 12/10/2021: </b><a href=""></a></li>
-								<li><b> </b><a href=" Laravel Github Actions | Laravel News (laravel-news.com)"> Laravel github action</a></li>
+								<li><b> 12/10/2021: </b><a href="Laravel Github Actions | Laravel News (laravel-news.com)"> Laravel github action</a></li>
 								<li><b> </b><a href=""></a></li>
 								<li><b> </b><a href=""></a></li>								
 								<li><b> </b><a href=""></a></li>
