--- a/index.html
+++ b/index.html
@@ -225,6 +225,14 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 02/10/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-alpha">launch of the Css Tailwind platform (in its Alpha stage)</a></li>
 			     					<li><b> 05/10/2021: </b><a href="https://laravel-news.com/serialization-for-eloquent-s-querybuilder"> L'option serialization pour le QueryBuilder</a></li>
 								<li><b> 12/10/2021: </b><a href="Laravel Github Actions | Laravel News (laravel-news.com)"> Laravel github action</a></li>
+								<li><b> 13/10/2021: </b><a href="Laravel 8.64 Released | Laravel News (laravel-news.com)"> release of Laravel version 8.64</a></li> 
+								<li><b> 14/10/2021: </b><a href="Use the Shopify API in Laravel With the Laravel Shopify Package | Laravel News (laravel-news.com)"> Shopify API</a></li>								 
+								<li><b> 15/10/2021: </b><a href="PHP 8.1 Support in Laravel Sail | Laravel News (laravel-news.com)"> PHP in Laravel Sail</a></li> 
+								<li><b> 19/10/2021: </b><a href="Things I Didn't Know About SQS | Laravel News (laravel-news.com) "> SQS </a></li> 
+								<li><b> 21/10/2021: </b><a href="Crawl and Index Your Website with Laravel Site Search | Laravel News (laravel-news.com) "> Laravel Site Search</a></li> 
+								<li><b> 22/10/2021: </b><a href="Enforce the Disposal of Objects in PHP | Laravel News (laravel-news.com)">Disposal of Obect in PHP</a></li> 
+								<li><b> 26/10/2021: </b><a href="Soft Delete Child Models When a Parent is Deleted | Laravel News (laravel-news.com) "> Deleting Child/Parent Models</a></li> 
+								<li><b> 28/10/2021: </b><a href="Blast — Storybook UI Development for Laravel Blade | Laravel News (laravel-news.com)"> Blast for Laravel Blade</a></li> 
 								
 			      				</ul>			      				
 			      				<br>
