--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 19/10/2021: </b><a href="https://laravel-news.com/amazon-sqs-tips "> SQS tips </a></li> 
 								<li><b> 21/10/2021: </b><a href="https://laravel-news.com/laravel-site-search "> Laravel Site Search</a></li> 
 								<li><b> 22/10/2021: </b><a href="https://laravel-news.com/enforce-the-disposal-of-objects-in-php">Disposal of Obect in PHP</a></li> 
-								<li><b> 26/10/2021: </b><a href="Soft Delete Child Models When a Parent is Deleted | Laravel News (laravel-news.com) "> Deleting Child/Parent Models</a></li> 
-								<li><b> 28/10/2021: </b><a href="Blast — Storybook UI Development for Laravel Blade | Laravel News (laravel-news.com)"> Blast for Laravel Blade</a></li> 
+								<li><b> 26/10/2021: </b><a href="https://laravel-news.com/laravel-soft-delete-parent"> Deleting Child/Parent Models</a></li> 
+								<li><b> 28/10/2021: </b><a href="https://laravel-news.com/blast-storybook-ui-development-for-laravel-blade"> Blast for Laravel Blade</a></li> 
 								
 			      				</ul>			      				
 			      				<br>
