--- a/index.html
+++ b/index.html
@@ -233,6 +233,8 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 22/10/2021: </b><a href="https://laravel-news.com/enforce-the-disposal-of-objects-in-php">Disposal of Obect in PHP</a></li> 
 								<li><b> 26/10/2021: </b><a href="https://laravel-news.com/laravel-soft-delete-parent"> Deleting Child/Parent Models</a></li> 
 								<li><b> 28/10/2021: </b><a href="https://laravel-news.com/blast-storybook-ui-development-for-laravel-blade"> Blast for Laravel Blade</a></li> 
+								<li><b> 01/11/2021: </b><a href="https://laravel-news.com/larastan-v1-released"> Blast for Laravel Blade</a></li> 
+								
 								
 			      				</ul>			      				
 			      				<br>
