--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ https://templatemo.com/tm-536-dream-pulse
 			    				<p><b>Explaining the chosen subject:</b></p>
 			      				<p> Primarily a php framework, Laravel is a web designing pack containing plenty of different technological services, from Appplication scafolding to server management. Its most recent version was released in February 10, 2021 (that being version 8.27), and a version 9 is due to be released in the early 2022.</p>
                                                         <p>recently, it has released a serverless plateforme called vapor. However, despite not being an actual server, vapor can still create databases, as well as modify, manage and scale them. the databases willl be store in a cloud, and cna be access via sign up (though you still have to pay).</p>
-			      				<b>Timeline des nouvelles recents de Laravel: </b>
+			      				<b>Timeline of Laravel updates: </b>
 							<ul>
 								<li><b> 02/10/2021: </b><a href="https://laravel-news.com/tailwind-css-v3-alpha">launch of the Css Tailwind platform (in its Alpha stage)</a></li>
 			     					<li><b> 05/10/2021: </b><a href="https://laravel-news.com/serialization-for-eloquent-s-querybuilder"> L'option serialization pour le QueryBuilder</a></li>
@@ -233,7 +233,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 22/10/2021: </b><a href="https://laravel-news.com/enforce-the-disposal-of-objects-in-php">Disposal of Obect in PHP</a></li> 
 								<li><b> 26/10/2021: </b><a href="https://laravel-news.com/laravel-soft-delete-parent"> Deleting Child/Parent Models</a></li> 
 								<li><b> 28/10/2021: </b><a href="https://laravel-news.com/blast-storybook-ui-development-for-laravel-blade"> Blast for Laravel Blade</a></li> 
-								<li><b> 01/11/2021: </b><a href="https://laravel-news.com/larastan-v1-released"> Blast for Laravel Blade</a></li> 
+								<li><b> 01/11/2021: </b><a href="https://laravel-news.com/larastan-v1-released"> release of Larastan V1</a></li> 
 								
 								
 			      				</ul>			      				
