--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 26/10/2021: </b><a href="https://laravel-news.com/laravel-soft-delete-parent"> Deleting Child/Parent Models</a></li> 
 								<li><b> 28/10/2021: </b><a href="https://laravel-news.com/blast-storybook-ui-development-for-laravel-blade"> Blast for Laravel Blade</a></li> 
 								<li><b> 01/11/2021: </b><a href="https://laravel-news.com/larastan-v1-released"> release of Larastan V1</a></li> 
+								<li><b> 04/11/2021: </b><a href="https://laravel-news.com/laravel-world"> </a>Laravel World</li> 
 								
 								
 			      				</ul>			      				
