--- a/index.html
+++ b/index.html
@@ -237,7 +237,19 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 04/11/2021: </b><a href="https://laravel-news.com/laravel-world"> </a>Laravel World</li> 
 								
 								
-			      				</ul>			      				
+			      				</ul>
+			      				<br>
+			      				<b>Security aspects of Laravel: </b>
+							<ul>
+								<li><b> </b><a href="https://nova.laravel.com/"> </a></li> 
+								<li><b> </b><a href="https://laravel.com/docs/8.x/sanctum"> </a></li>
+								<li><b> </b><a href="https://laravel.com/docs/8.x/socialite"> </a></li>
+								<li><b> </b><a href="https://forge.laravel.com/"> </a></li>
+								<li><b> </b><a href="https://laravel.com/docs/8.x/horizon"> </a></li>
+								<li><b> </b><a href="https://laravel.com/docs/8.x/telescope"> </a></li>	
+			      				</ul>
+			      				<br> 
+							<a href="https://net2.com/top-7-laravel-security-practices-every-developer-should-know/"><b> security practices chen using Laravel</b></a>
 			      				<br>
 			     				<h2 style="text-decoration:underline;"> <b><span>html</span></b></h2>
 			      				<p><b>Explaining the chosen subject:</b></p>
