--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 15/10/2021: </b><a href="https://laravel-news.com/php-8-1-support-in-laravel-sail"> PHP in Laravel Sail</a></li> 
 								<li><b> 19/10/2021: </b><a href="https://laravel-news.com/amazon-sqs-tips "> SQS tips </a></li> 
 								<li><b> 21/10/2021: </b><a href="https://laravel-news.com/laravel-site-search "> Laravel Site Search</a></li> 
-								<li><b> 22/10/2021: </b><a href="https://laravel-news.com/enforce-the-disposal-of-objects-in-php">Disposal of Obect in PHP</a></li> 
+								<li><b> 22/10/2021: </b><a href="https://laravel-news.com/enforce-the-disposal-of-objects-in-php">Disposal of Obect in PHP</a></li>
+								<li><b> 25/10/2021: </b><a href="https://laravel-news.com/scout-apm-intuitive-laravel-performance-monitoring">Laravel Scout performance monitoring</a></li>
 								<li><b> 26/10/2021: </b><a href="https://laravel-news.com/laravel-soft-delete-parent"> Deleting Child/Parent Models</a></li> 
 								<li><b> 28/10/2021: </b><a href="https://laravel-news.com/blast-storybook-ui-development-for-laravel-blade"> Blast for Laravel Blade</a></li> 
 								<li><b> 02/11/2021: </b><a href="https://laravel-news.com/larastan-v1-released"> release of Larastan V1</a></li> 
@@ -241,12 +242,12 @@ https://templatemo.com/tm-536-dream-pulse
 			      				<br>
 			      				<b>Security aspects of Laravel: </b>
 							<ul>
-								<li><b> </b><a href="https://nova.laravel.com/"> </a></li> 
-								<li><b> </b><a href="https://laravel.com/docs/8.x/sanctum"> </a></li>
-								<li><b> </b><a href="https://laravel.com/docs/8.x/socialite"> </a></li>
-								<li><b> </b><a href="https://forge.laravel.com/"> </a></li>
-								<li><b> </b><a href="https://laravel.com/docs/8.x/horizon"> </a></li>
-								<li><b> </b><a href="https://laravel.com/docs/8.x/telescope"> </a></li>	
+								<li><b> </b><a href="https://nova.laravel.com/"> </a> Larvel Nova </li> 
+								<li><b> </b><a href="https://laravel.com/docs/8.x/sanctum"> Larvel Sanctum </a></li>
+								<li><b> </b><a href="https://laravel.com/docs/8.x/socialite"> Larvel Socialite </a></li>
+								<li><b> </b><a href="https://forge.laravel.com/"> Larvel Forge </a></li>
+								<li><b> </b><a href="https://laravel.com/docs/8.x/horizon"> Larvel Horizon </a></li>
+								<li><b> </b><a href="https://laravel.com/docs/8.x/telescope"> Larvel Telescope </a></li>	
 			      				</ul>
 			      				<br> 
 							<a href="https://net2.com/top-7-laravel-security-practices-every-developer-should-know/"><b> security practices chen using Laravel</b></a>
