--- a/index.html
+++ b/index.html
@@ -240,12 +240,12 @@ https://templatemo.com/tm-536-dream-pulse
 			      				<br>
 			      				<b>Security aspects of Laravel: </b>
 							<ul>
-								<li><b> </b><a href="https://nova.laravel.com/"> </a> Larvel Nova </li> 
-								<li><b> </b><a href="https://laravel.com/docs/8.x/sanctum"> Larvel Sanctum </a></li>
-								<li><b> </b><a href="https://laravel.com/docs/8.x/socialite"> Larvel Socialite </a></li>
-								<li><b> </b><a href="https://forge.laravel.com/"> Larvel Forge </a></li>
-								<li><b> </b><a href="https://laravel.com/docs/8.x/horizon"> Larvel Horizon </a></li>
-								<li><b> </b><a href="https://laravel.com/docs/8.x/telescope"> Larvel Telescope </a></li>	
+								<li><b> </b><a href="https://nova.laravel.com/"> </a> Larvel Nova (Administrative panel) </li> 
+								<li><b> </b><a href="https://laravel.com/docs/8.x/sanctum"> Larvel Sanctum (API / Mobile authentification) </a></li>
+								<li><b> </b><a href="https://laravel.com/docs/8.x/socialite"> Larvel Socialite (Oauth authentification) </a></li>
+								<li><b> </b><a href="https://forge.laravel.com/"> Larvel Forge (server management) </a></li>
+								<li><b> </b><a href="https://laravel.com/docs/8.x/horizon"> Larvel Horizon (Queue Monitoring) </a></li>
+								<li><b> </b><a href="https://laravel.com/docs/8.x/telescope"> Larvel Telescope (debug assistant) </a></li>	
 			      				</ul>
 			      				<br> 
 							<a href="https://net2.com/top-7-laravel-security-practices-every-developer-should-know/"><b> security practices chen using Laravel</b></a>
