--- a/index.html
+++ b/index.html
@@ -235,7 +235,10 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 26/10/2021: </b><a href="https://laravel-news.com/laravel-soft-delete-parent"> Deleting Child/Parent Models</a></li> 
 								<li><b> 28/10/2021: </b><a href="https://laravel-news.com/blast-storybook-ui-development-for-laravel-blade"> Blast for Laravel Blade</a></li> 
 								<li><b> 02/11/2021: </b><a href="https://laravel-news.com/larastan-v1-released"> release of Larastan V1</a></li> 
-								<li><b> 04/11/2021: </b><a href="https://laravel-news.com/laravel-world"> Laravel World </a></li> 															
+								<li><b> 04/11/2021: </b><a href="https://laravel-news.com/laravel-world"> Laravel World </a></li> 
+								<li><b> 10/11/2021: </b><a href="https://laravel-news.com/laravel-8-70-0"> Release of Laravel version 8.70 </a></li>
+								<li><b> 11/11/2021: </b><a href="https://laravel-news.com/laravel-model-sanitize"> Laravel sanitized model data </a></li>
+								<li><b> 15/11/2021: </b><a href="https://laravel-news.com/multi-tenant-saas-boilerplate-for-laravel"> SaaS boilerplate </a></li>
 			      				</ul>
 			      				<br>
 			      				<b>Security aspects of Laravel: </b>
