--- a/index.html
+++ b/index.html
@@ -238,7 +238,10 @@ https://templatemo.com/tm-536-dream-pulse
 								<li><b> 04/11/2021: </b><a href="https://laravel-news.com/laravel-world"> Laravel World </a></li> 
 								<li><b> 10/11/2021: </b><a href="https://laravel-news.com/laravel-8-70-0"> Release of Laravel version 8.70 </a></li>
 								<li><b> 11/11/2021: </b><a href="https://laravel-news.com/laravel-model-sanitize"> Laravel sanitized model data </a></li>
-								<li><b> 15/11/2021: </b><a href="https://laravel-news.com/multi-tenant-saas-boilerplate-for-laravel"> SaaS boilerplate </a></li>
+								<li><b> 15/11/2021: </b><a href="https://laravel-news.com/multi-tenant-saas-boilerplate-for-laravel"> SaaS boilerplate </a></li>							
+								<li><b> 16/11/2021: </b><a href="https://laravel-news.com/laravel-cache-helper"> Cache herlper </a></li>
+								<li><b> 18/11/2021: </b><a href="https://laravel-news.com/learn-how-to-build-modern-laravel-apps-using-inertia-js"> Inertia.js </a></li>
+								
 			      				</ul>
 			      				<br>
 			      				<b>Security aspects of Laravel: </b>
